# boinc-api

./: .gitignore  Makefile  README.md  pyproject.toml
.gitlab/: dependabot.yml
src/boinc_api/: app.py
src/boinc_api/blueprints/: api_versions.py
src/boinc_api/blueprints/v1/: client.py  clients.py  messages.py  notices.py  projects.py  results.py
tests/unit/: conftest.py  mock_boinc.py  test_app.py
tests/unit/clients/: test_clients.py
tests/unit/v1/: test_client.py  test_messages.py  test_notices.py  test_projects.py  test_results.py
