[tool.poetry]
name = "boinc-api"
version = "0.1.0"
description = "Flask API for serving the boinc-client on a web interface"
authors = ["Lewis England <lewis2004@hotmail.com>"]
license = "gpl-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
boinc-client = "^1.4.4"
flask-cors = "^3.0.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
